--- a/music/templates/music_recordings.html
+++ b/music/templates/music_recordings.html
@@ -6,14 +6,18 @@
 	<iframe class="soundcloudIframe" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/3806720&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
 	<br/>
 </div>
-<div class="flexContainer">
-	<div class="flexItem">
-	Vanessa appearing as flute soloist with the La Jolla Symphony for the premiere of Qingqing Wang's <i>Between Clouds and Streams</i><br/>
+<div class="flexContainer youtube">
+	<div class="flexItem youtube">
+	<p class="youtube">Flute soloist with the La Jolla Symphony for the premiere of Q. Wang's <i>Between Clouds and Streams</i></p>
 	<iframe class="youtubeIframe" src="https://www.youtube.com/embed/7sE_uk2GNIE?start=474" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	</div>
-	<div class="flexItem">
-	Vanessa as feature piccolo with the La Jolla Symphony for Hannah Lash's <i>Eating Flowers</i><br/>
+	<div class="flexItem youtube">
+	<p class="youtube">Feature piccolo with the La Jolla Symphony for Hannah Lash's <i>Eating Flowers</i></p>
 	<iframe class="youtubeIframe" src="https://www.youtube.com/embed/6c5LXZXs7n8?start=20" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	</div>
+	<div class="flexItem youtube">
+	<p class="youtube">Playing at Carnegie Hall with the Brooklyn Wind Symphony</p>
+	<iframe class="youtubeIframe" src="https://www.youtube.com/embed/yUPXMGvHxdk?start=3880" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	</div>
 </div>
 {% endblock %}
