--- a/music/templates/music_base.html
+++ b/music/templates/music_base.html
@@ -20,12 +20,11 @@ window.onload = function(){
 	navHighlight();
 };
 </script>
-<div class="siteContainerOuter">
-<div class="siteContainerInner">
+<div class="siteContainer">
 	{% block top_content %} 
-	<h1 style="font-family:Didot,Trebuchet MS, Tahoma !important;"><a href="/music/" style="color:inherit">VANESSA MILLER</a></h1>
+	<h1 style="font-family:Didot,Trebuchet MS, Tahoma !important;"><a href="/" style="color:inherit">VANESSA MILLER</a></h1>
 	<div class="navBar">
-		<span class="navSpan">
+		<span>
 		<a class="navItem" href="/about">About</a>
 		<a class="navItem" href="/recordings">Listen</a>
 		<!--<a class="navItem" href="/repertoire">Repertoire</a>
@@ -51,7 +50,6 @@ window.onload = function(){
 		</div>
 	</div>
 	{% endblock %}
-</div> <!-- siteContainerInner -->
-</div> <!-- siteContainerOuter -->
+</div> <!-- siteContainer -->
 </body>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
