--- a/static/music/music.css
+++ b/static/music/music.css
@@ -1,33 +1,29 @@
 body {
     overflow-x: hidden;
     background-image: url("/static/music/white_wall_hash.png");
-}
-
-div.siteContainerOuter {
-    overflow-x: hidden;
-    max-width: 99%;
-    height: 99vh;
+    height: 100%;
     overflow-y: scroll;
-    vertical-align: middle;
-    margin: auto;
 }
 
-div.siteContainerInner {
-    position: relative;
-    margin: 0 auto;
+div.siteContainer {
+    max-width: 99%;
     width: 85%;
-    height: auto;
+    height: 99vh;
+    vertical-align: middle;
+    margin: 0 auto;
     text-align: center;
+}
+
+h1 {
+    margin-block-start: 0.25em;
+    margin-block-end: 0.25em;
 }
 
 div.navBar {
-    float: top;
-    margin: 10px auto 10px 0;
+    margin: 0;
     text-align: center;
     padding: 10px;
 }
-
-span.navSpan {}
 
 a.navItem {
     background-color: WhiteSmoke;
@@ -75,6 +71,28 @@ div.flexItem {
     padding: 5px;
     height: 100%;
     margin: auto 5px;
+    flex-direction: column;
+    justify-content: center;
+}
+
+div.flexContainer.newsPage {
+    display: flex;
+    gap: 2em;
+    align-items: flex-start;
+    justify-content: space-between;
+    flex-wrap: nowrap;
+}
+
+.flexItem.newsPageText {
+    flex: 1 1 auto;
+    min-width: 0;
+}
+
+.flexItem.flexItem.newsPageImage {
+    flex: 0 0 auto;
+    max-width: 30%;
+    min-width: 150px;
+    align-self: flex-start;
 }
 
 div.flexContainer.youtube {
@@ -158,6 +176,7 @@ tr.programMovement td {
 div.bottomSocialMediaIcons {
     margin: 0 auto;
     text-align: center;
+    padding: 0.5rem;
 }
 
 p.nextToPicture {
@@ -168,8 +187,9 @@ p.nextToPicture {
 }
 
 img.halfPagePicture {
-    height: 70vh;
+    max-height: 80vh;
     width: auto;
+    object-fit: contain;
 }
 
 ul {
@@ -180,6 +200,18 @@ ul {
 ul.messages {
     font-size: large;
     font-weight: bold;
+}
+
+ul.concertList {
+    padding: 0 1em;
+    font-size: 1rem;
+    line-height: 1.5;
+    text-align: left;
+    margin-bottom: 1em;
+}
+
+ul.concertList li {
+    margin-bottom: 0.5em;
 }
 
 li.success {
@@ -298,5 +330,10 @@ iframe.youtubeIframe {
     }
     tr.programPiece td {
         padding: 10px 5px !important;
+    }
+    img.halfPagePicture {
+        width: 100%;
+        height: auto;
+        max-height: none;
     }
 }
