--- a/music/templates/music_base.html
+++ b/music/templates/music_base.html
@@ -1,4 +1,5 @@
-<link rel="stylesheet" type="text/css" href="/static/music/music.css">
+{% load static %}
+
 <link rel="stylesheet" type="text/css" href="/static/base.css">
 <link rel="shortcut icon" href="/static/favicon.ico"/>
 <head><title>Vanessa Miller</title></head>
