--- a/static/base.css
+++ b/static/base.css
@@ -1,38 +1,49 @@
 body {
-	margin: 0;
-	font-family: "Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
-	font-size: 1rem;
-	font-weight: 400;
-	line-height: 1.5;
-	color: #212529;
-	text-align: left;
-	background-color: #fff;
-	background-size: cover;
-	background-repeat: no-repeat;
-	background-position: center center;
-	background-attachment: fixed;
+    margin: 0;
+    font-family: "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #212529;
+    text-align: left;
+    background-color: #fff;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-attachment: fixed;
 }
+
 div {
-	display: block;
+    display: block;
 }
+
 .homepageCenter {
-	width: 50%; 
-	margin: 10% auto; 
-	background-color: rgba(255,255,255,0.70); 
-	padding:5px;
+    width: 50%;
+    margin: 10% auto;
+    background-color: rgba(255, 255, 255, 0.70);
+    padding: 5px;
 }
+
 .homepageDock {
-	display:flex; 
-	text-align:center;
+    display: flex;
+    text-align: center;
 }
+
 .homepageDockEl {
-	flex: 1; 
-	padding:5px;
+    flex: 1;
+    padding: 5px;
 }
-h1, h2, h3, h4, h5, h6 {
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
     margin-top: 0;
     margin-bottom: .5rem;
 }
+
 h1 {
     display: block;
     font-size: 2em;
@@ -42,62 +53,95 @@ h1 {
     margin-inline-end: 0px;
     font-weight: bold;
 }
+
 .errorlist {
     font-weight: bold;
     color: DarkRed;
 }
+
 div.iconFooter {
-	position:absolute;
-	bottom:0;
-	left:50%;
-	transform:translate(-50%,-50%);
-	margin:10 auto;
-	text-align:center;
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    margin: 10 auto;
+    text-align: center;
 }
-div.iconFooterInner {	
-	display: inline-block;
-	background-color: rgba(255,255,255,0.70);
-	padding: 5px;
+
+div.iconFooterInner {
+    display: inline-block;
+    background-color: rgba(255, 255, 255, 0.70);
+    padding: 5px;
 }
+
 .icon:hover {
-	opacity: .75;
+    opacity: .75;
 }
-.h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
+
+.h1,
+.h2,
+.h3,
+.h4,
+.h5,
+.h6,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
     margin-bottom: .5rem;
     font-family: inherit;
     font-weight: 500;
     line-height: 1.2;
     color: inherit;
 }
+
 .card-img-top {
     width: 100%;
     border-top-left-radius: calc(.25rem - 1px);
     border-top-right-radius: calc(.25rem - 1px);
 }
+
 img {
     vertical-align: middle;
     border-style: none;
 }
-.offset-md-2{margin-left:16.666667%}
+
+.offset-md-2 {
+    margin-left: 16.666667%
+}
+
 .homepageMainLink {
-	height:20vh;
-	width:auto;
+    height: 20vh;
+    width: auto;
 }
+
 .homepageMainLink:hover {
-	opacity: .75;
+    opacity: .75;
 }
+
 a {
     text-decoration: none;
     background-color: transparent;
     color: blue;
 }
-button, select {
+
+button,
+select {
     text-transform: none;
 }
-button, input {
+
+button,
+input {
     overflow: visible;
 }
-button, input, optgroup, select, textarea {
+
+button,
+input,
+optgroup,
+select,
+textarea {
     margin: 0;
     font-family: inherit;
     font-size: inherit;
@@ -107,29 +151,571 @@ button, input, optgroup, select, textarea {
 button {
     border-radius: 0;
 }
+
 @media only screen and (max-width: 1200px) and (min-width: 720px) {
-  .homepageCenter {
-	width: 75%;
-  }
+    .homepageCenter {
+        width: 75%;
+    }
 }
+
 @media only screen and (max-width: 720px) {
-  .homepageCenter {
-	width: 80%;
-  }
-  .homepageDock {
-	display:block; 
-	text-align:center;
-  }
-  .homepageDockEl {
-	padding:5px;
-  }
-  div.iconFooter {
-	position:relative;
-	bottom:0;
-	left:50%;
-	transform:translate(-50%,-50%);
-	margin:10 auto;
-	text-align:center;
-  }
+    .homepageCenter {
+        width: 80%;
+    }
+    .homepageDock {
+        display: block;
+        text-align: center;
+    }
+    .homepageDockEl {
+        padding: 5px;
+    }
+    div.iconFooter {
+        position: relative;
+        bottom: 0;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        margin: 10 auto;
+        text-align: center;
+    }
 }
-.popover{position:absolute;top:0;left:0;z-index:1060;display:block;max-width:276px;font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";font-style:normal;font-weight:400;line-height:1.5;text-align:left;text-align:start;text-decoration:none;text-shadow:none;text-transform:none;letter-spacing:normal;word-break:normal;word-spacing:normal;white-space:normal;line-break:auto;font-size:.875rem;word-wrap:break-word;background-color:#fff;background-clip:padding-box;border:1px solid rgba(0,0,0,.2);border-radius:.3rem}.popover .arrow{position:absolute;display:block;width:1rem;height:.5rem;margin:0 .3rem}.popover .arrow::after,.popover .arrow::before{position:absolute;display:block;content:"";border-color:transparent;border-style:solid}.bs-popover-auto[x-placement^=top],.bs-popover-top{margin-bottom:.5rem}.bs-popover-auto[x-placement^=top] .arrow,.bs-popover-top .arrow{bottom:calc((.5rem + 1px) * -1)}.bs-popover-auto[x-placement^=top] .arrow::after,.bs-popover-auto[x-placement^=top] .arrow::before,.bs-popover-top .arrow::after,.bs-popover-top .arrow::before{border-width:.5rem .5rem 0}.bs-popover-auto[x-placement^=top] .arrow::before,.bs-popover-top .arrow::before{bottom:0;border-top-color:rgba(0,0,0,.25)}.bs-popover-auto[x-placement^=top] .arrow::after,.bs-popover-top .arrow::after{bottom:1px;border-top-color:#fff}.bs-popover-auto[x-placement^=right],.bs-popover-right{margin-left:.5rem}.bs-popover-auto[x-placement^=right] .arrow,.bs-popover-right .arrow{left:calc((.5rem + 1px) * -1);width:.5rem;height:1rem;margin:.3rem 0}.bs-popover-auto[x-placement^=right] .arrow::after,.bs-popover-auto[x-placement^=right] .arrow::before,.bs-popover-right .arrow::after,.bs-popover-right .arrow::before{border-width:.5rem .5rem .5rem 0}.bs-popover-auto[x-placement^=right] .arrow::before,.bs-popover-right .arrow::before{left:0;border-right-color:rgba(0,0,0,.25)}.bs-popover-auto[x-placement^=right] .arrow::after,.bs-popover-right .arrow::after{left:1px;border-right-color:#fff}.bs-popover-auto[x-placement^=bottom],.bs-popover-bottom{margin-top:.5rem}.bs-popover-auto[x-placement^=bottom] .arrow,.bs-popover-bottom .arrow{top:calc((.5rem + 1px) * -1)}.bs-popover-auto[x-placement^=bottom] .arrow::after,.bs-popover-auto[x-placement^=bottom] .arrow::before,.bs-popover-bottom .arrow::after,.bs-popover-bottom .arrow::before{border-width:0 .5rem .5rem .5rem}.bs-popover-auto[x-placement^=bottom] .arrow::before,.bs-popover-bottom .arrow::before{top:0;border-bottom-color:rgba(0,0,0,.25)}.bs-popover-auto[x-placement^=bottom] .arrow::after,.bs-popover-bottom .arrow::after{top:1px;border-bottom-color:#fff}.bs-popover-auto[x-placement^=bottom] .popover-header::before,.bs-popover-bottom .popover-header::before{position:absolute;top:0;left:50%;display:block;width:1rem;margin-left:-.5rem;content:"";border-bottom:1px solid #f7f7f7}.bs-popover-auto[x-placement^=left],.bs-popover-left{margin-right:.5rem}.bs-popover-auto[x-placement^=left] .arrow,.bs-popover-left .arrow{right:calc((.5rem + 1px) * -1);width:.5rem;height:1rem;margin:.3rem 0}.bs-popover-auto[x-placement^=left] .arrow::after,.bs-popover-auto[x-placement^=left] .arrow::before,.bs-popover-left .arrow::after,.bs-popover-left .arrow::before{border-width:.5rem 0 .5rem .5rem}.bs-popover-auto[x-placement^=left] .arrow::before,.bs-popover-left .arrow::before{right:0;border-left-color:rgba(0,0,0,.25)}.bs-popover-auto[x-placement^=left] .arrow::after,.bs-popover-left .arrow::after{right:1px;border-left-color:#fff}.popover-header{padding:.5rem .75rem;margin-bottom:0;font-size:1rem;color:inherit;background-color:#f7f7f7;border-bottom:1px solid #ebebeb;border-top-left-radius:calc(.3rem - 1px);border-top-right-radius:calc(.3rem - 1px)}.popover-header:empty{display:none}.popover-body{padding:.5rem .75rem;color:#212529}
+
+.popover {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1060;
+    display: block;
+    max-width: 276px;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    font-style: normal;
+    font-weight: 400;
+    line-height: 1.5;
+    text-align: left;
+    text-align: start;
+    text-decoration: none;
+    text-shadow: none;
+    text-transform: none;
+    letter-spacing: normal;
+    word-break: normal;
+    word-spacing: normal;
+    white-space: normal;
+    line-break: auto;
+    font-size: .875rem;
+    word-wrap: break-word;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid rgba(0, 0, 0, .2);
+    border-radius: .3rem
+}
+
+.popover .arrow {
+    position: absolute;
+    display: block;
+    width: 1rem;
+    height: .5rem;
+    margin: 0 .3rem
+}
+
+.popover .arrow::after,
+.popover .arrow::before {
+    position: absolute;
+    display: block;
+    content: "";
+    border-color: transparent;
+    border-style: solid
+}
+
+.bs-popover-auto[x-placement^=top],
+.bs-popover-top {
+    margin-bottom: .5rem
+}
+
+.bs-popover-auto[x-placement^=top] .arrow,
+.bs-popover-top .arrow {
+    bottom: calc((.5rem + 1px) * -1)
+}
+
+.bs-popover-auto[x-placement^=top] .arrow::after,
+.bs-popover-auto[x-placement^=top] .arrow::before,
+.bs-popover-top .arrow::after,
+.bs-popover-top .arrow::before {
+    border-width: .5rem .5rem 0
+}
+
+.bs-popover-auto[x-placement^=top] .arrow::before,
+.bs-popover-top .arrow::before {
+    bottom: 0;
+    border-top-color: rgba(0, 0, 0, .25)
+}
+
+.bs-popover-auto[x-placement^=top] .arrow::after,
+.bs-popover-top .arrow::after {
+    bottom: 1px;
+    border-top-color: #fff
+}
+
+.bs-popover-auto[x-placement^=right],
+.bs-popover-right {
+    margin-left: .5rem
+}
+
+.bs-popover-auto[x-placement^=right] .arrow,
+.bs-popover-right .arrow {
+    left: calc((.5rem + 1px) * -1);
+    width: .5rem;
+    height: 1rem;
+    margin: .3rem 0
+}
+
+.bs-popover-auto[x-placement^=right] .arrow::after,
+.bs-popover-auto[x-placement^=right] .arrow::before,
+.bs-popover-right .arrow::after,
+.bs-popover-right .arrow::before {
+    border-width: .5rem .5rem .5rem 0
+}
+
+.bs-popover-auto[x-placement^=right] .arrow::before,
+.bs-popover-right .arrow::before {
+    left: 0;
+    border-right-color: rgba(0, 0, 0, .25)
+}
+
+.bs-popover-auto[x-placement^=right] .arrow::after,
+.bs-popover-right .arrow::after {
+    left: 1px;
+    border-right-color: #fff
+}
+
+.bs-popover-auto[x-placement^=bottom],
+.bs-popover-bottom {
+    margin-top: .5rem
+}
+
+.bs-popover-auto[x-placement^=bottom] .arrow,
+.bs-popover-bottom .arrow {
+    top: calc((.5rem + 1px) * -1)
+}
+
+.bs-popover-auto[x-placement^=bottom] .arrow::after,
+.bs-popover-auto[x-placement^=bottom] .arrow::before,
+.bs-popover-bottom .arrow::after,
+.bs-popover-bottom .arrow::before {
+    border-width: 0 .5rem .5rem .5rem
+}
+
+.bs-popover-auto[x-placement^=bottom] .arrow::before,
+.bs-popover-bottom .arrow::before {
+    top: 0;
+    border-bottom-color: rgba(0, 0, 0, .25)
+}
+
+.bs-popover-auto[x-placement^=bottom] .arrow::after,
+.bs-popover-bottom .arrow::after {
+    top: 1px;
+    border-bottom-color: #fff
+}
+
+.bs-popover-auto[x-placement^=bottom] .popover-header::before,
+.bs-popover-bottom .popover-header::before {
+    position: absolute;
+    top: 0;
+    left: 50%;
+    display: block;
+    width: 1rem;
+    margin-left: -.5rem;
+    content: "";
+    border-bottom: 1px solid #f7f7f7
+}
+
+.bs-popover-auto[x-placement^=left],
+.bs-popover-left {
+    margin-right: .5rem
+}
+
+.bs-popover-auto[x-placement^=left] .arrow,
+.bs-popover-left .arrow {
+    right: calc((.5rem + 1px) * -1);
+    width: .5rem;
+    height: 1rem;
+    margin: .3rem 0
+}
+
+.bs-popover-auto[x-placement^=left] .arrow::after,
+.bs-popover-auto[x-placement^=left] .arrow::before,
+.bs-popover-left .arrow::after,
+.bs-popover-left .arrow::before {
+    border-width: .5rem 0 .5rem .5rem
+}
+
+.bs-popover-auto[x-placement^=left] .arrow::before,
+.bs-popover-left .arrow::before {
+    right: 0;
+    border-left-color: rgba(0, 0, 0, .25)
+}
+
+.bs-popover-auto[x-placement^=left] .arrow::after,
+.bs-popover-left .arrow::after {
+    right: 1px;
+    border-left-color: #fff
+}
+
+.popover-header {
+    padding: .5rem .75rem;
+    margin-bottom: 0;
+    font-size: 1rem;
+    color: inherit;
+    background-color: #f7f7f7;
+    border-bottom: 1px solid #ebebeb;
+    border-top-left-radius: calc(.3rem - 1px);
+    border-top-right-radius: calc(.3rem - 1px)
+}
+
+.popover-header:empty {
+    display: none
+}
+
+.popover-body {
+    padding: .5rem .75rem;
+    color: #212529
+}
+
+body {
+    overflow-x: hidden;
+    background-image: url("/static/music/white_wall_hash.png");
+    height: 100%;
+    overflow-y: scroll;
+}
+
+div.siteContainer {
+    max-width: 99%;
+    width: 85%;
+    height: 99vh;
+    vertical-align: middle;
+    margin: 0 auto;
+    text-align: center;
+}
+
+h1 {
+    margin-block-start: 0.25em;
+    margin-block-end: 0.25em;
+}
+
+div.navBar {
+    margin: 0;
+    text-align: center;
+    padding: 10px;
+}
+
+a.navItem {
+    background-color: WhiteSmoke;
+    border-color: WhiteSmoke;
+    border-radius: 10px;
+    padding: 10px 10px;
+    color: black;
+    font-weight: bold;
+    font-size: large;
+    display: inline-block;
+}
+
+a.navItem:hover {
+    background-color: Lavender;
+}
+
+a.on {
+    background-color: #CCCCFF;
+}
+
+div.repContainer {
+    column-count: 2;
+}
+
+div.repSection {
+    break-inside: avoid-column;
+    padding: 5px;
+}
+
+table.repertoire {
+    padding: 5px;
+    margin: 5px;
+}
+
+table.repertoire td {
+    padding: 1px 5px 1px 3px;
+}
+
+div.flexContainer {
+    display: flex;
+}
+
+div.flexItem {
+    flex: 1;
+    padding: 5px;
+    height: 100%;
+    margin: auto 5px;
+    flex-direction: column;
+    justify-content: center;
+}
+
+div.flexContainer.newsPage {
+    display: flex;
+    gap: 2em;
+    align-items: flex-start;
+    justify-content: space-between;
+    flex-wrap: nowrap;
+}
+
+.flexItem.newsPageText {
+    flex: 1 1 auto;
+    min-width: 0;
+}
+
+.flexItem.flexItem.newsPageImage {
+    flex: 0 0 auto;
+    max-width: 30%;
+    min-width: 150px;
+    align-self: flex-start;
+}
+
+div.flexContainer.youtube {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 1.5em;
+    padding: 1em;
+}
+
+div.flexItem.youtube {
+    flex: 1 1 300px;
+    padding: 0.5em;
+    max-width: 33%;
+    box-sizing: border-box;
+    text-align: center;
+    margin: auto 5px;
+}
+
+p.youtube {
+    margin-bottom: 0.5em;
+}
+
+div.programNav {
+    width: 100%;
+    text-align: center;
+    margin: auto;
+    display: flex;
+}
+
+div.contactForm {
+    text-align: left;
+    padding: 2% 5%;
+}
+
+button.contactSubmit {
+    margin: 10px;
+    border-radius: 8px;
+}
+
+button.programNavItem {
+    flex: 1;
+    padding: 5px;
+    margin: auto;
+}
+
+button.programNavItem:hover {
+    background-color: Thistle;
+}
+
+button.activeProgramNavItem {
+    background-color: MediumPurple;
+}
+
+div.programContainer {
+    width: 80%;
+    margin: auto;
+    position: relative;
+}
+
+div.programItem {
+    display: none;
+}
+
+div.activeProgramItem {
+    display: block;
+    padding: 20px;
+    text-align: center;
+    width: auto;
+}
+
+tr.programPiece td {
+    padding: 20px;
+}
+
+tr.programMovement td {
+    padding: 0 10px 0 0;
+    text-align: left;
+}
+
+div.bottomSocialMediaIcons {
+    margin: 0 auto;
+    text-align: center;
+    padding: 0.5rem;
+}
+
+p.nextToPicture {
+    text-align: left;
+    height: 100%;
+    max-width: 100%;
+    padding: 0% 5%;
+    margin: auto;
+}
+
+img.halfPagePicture {
+    max-height: 80vh;
+    width: auto;
+    object-fit: contain;
+}
+
+ul {
+    display: inline-block;
+    text-align: left;
+}
+
+ul.messages {
+    font-size: large;
+    font-weight: bold;
+}
+
+ul.concertList {
+    padding: 0 1em;
+    font-size: 1rem;
+    line-height: 1.5;
+    text-align: left;
+    margin-bottom: 1em;
+}
+
+ul.concertList li {
+    margin-bottom: 0.5em;
+}
+
+li.success {
+    color: green;
+}
+
+.flute {
+    color: Indigo;
+}
+
+.picc {
+    color: DarkGreen;
+}
+
+.formField {
+    margin: 5px;
+    padding: 2px;
+    min-width: 55%;
+    display: block;
+}
+
+.formFieldMessage {
+    min-width: 90%;
+}
+
+.landingImage {
+    height: 70vh;
+    width: auto;
+    margin: auto;
+}
+
+iframe.soundcloudIframe {
+    width: 70%;
+    height: 350;
+}
+
+iframe.youtubeIframe {
+    width: 100%;
+    aspect-ratio: 16/9;
+    max-width: 400px;
+    height: auto;
+    border: none;
+}
+
+@media only screen and (max-width: 1400px) {
+    .flexItem {
+        max-width: 50% !important;
+    }
+    .programContainer {
+        width: 90% !important;
+    }
+}
+
+@media only screen and (max-width: 1200px) {
+    .siteContainerInner {
+        width: 90% !important;
+    }
+    iframe.youtubeIframe {
+        width: 400;
+        height: 225;
+    }
+}
+
+@media only screen and (max-width: 1000px) {
+    .halfPagePicture {
+        object-fit: cover;
+        height: 48% !important;
+        width: auto !important;
+        max-width: 99% !important;
+        margin: auto;
+    }
+    .nextToPicture {
+        width: 99%;
+        max-width: 99%;
+        height: auto !important;
+        padding: 5% 2% !important;
+        margin: auto;
+    }
+    .flexItem {
+        max-width: 99% !important;
+        height: auto !important;
+        display: block !important;
+    }
+    .flexContainer {
+        display: block !important;
+    }
+    .siteContainerInner {
+        width: 98% !important;
+    }
+    .repContainer {
+        column-count: 1 !important;
+    }
+    .repertoire {
+        margin: auto !important;
+    }
+    .programContainer {
+        width: 99% !important;
+    }
+    .bottomSocialMediaIcons {
+        display: block !important;
+    }
+    iframe.soundcloudIframe {
+        width: 90% !important;
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    div.contactForm {
+        padding: 2% 0%;
+    }
+    .programContainer {
+        width: 99% !important;
+    }
+    div.activeProgramItem {
+        padding: 5px !important;
+    }
+    tr.programPiece td {
+        padding: 10px 5px !important;
+    }
+    img.halfPagePicture {
+        width: 100%;
+        height: auto;
+        max-height: none;
+    }
+}
