remove unused styles

--- a/music/templates/music_base.html
+++ b/music/templates/music_base.html
@@ -86,7 +86,7 @@ document.addEventListener('DOMContentLoaded', function() {
     
     {% block bottom_content %} 
     <footer class="bottomSocialMediaIcons">
-        <div class="iconFooterInner">
+        <div>
             <a target="_blank" href="https://www.linkedin.com/in/vanessagmiller/" 
                aria-label="Vanessa Miller on LinkedIn" rel="noopener">
                 <img class="icon" alt="LinkedIn" src="/static/icons/linkedin.png" 
