--- a/music/templates/music_base.html
+++ b/music/templates/music_base.html
@@ -64,7 +64,7 @@ document.addEventListener('DOMContentLoaded', function() {
     {% block top_content %} 
     <header class="header">
         <h1>
-            <a href="/" style="color:inherit; text-decoration:none;">
+            <a href="/">
                 VANESSA MILLER
             </a>
         </h1>
