--- a/music/templates/music_contact.html
+++ b/music/templates/music_contact.html
@@ -23,7 +23,7 @@
     
     <div class="flexItem contactForm">
         <h2>Get In Touch</h2>
-        <p style="text-align: center; color: var(--text-light); margin-bottom: 2rem;">
+        <p class="contact-intro-text">
             We'd love to hear from you! Whether you're interested in booking a performance, 
             collaborating on a project, or just saying hello.
         </p>
@@ -73,7 +73,7 @@
                 {{ form.message.errors }}
             </div>
             
-            <div class="form-actions" style="text-align: center;">
+            <div class="form-actions">
                 <button class="contactSubmit" type="submit">
                     Send Message
                 </button>
