--- a/music/templates/music_repertoire.html
+++ b/music/templates/music_repertoire.html
@@ -2,7 +2,7 @@
 {% load index %}
 {% block page_content %}
 The listing below is a representative sample, and Vanessa is always open to new repertoire!
-<p style="text-align:center"><font class="flute">Flute</font> <font class="picc">Piccolo</font></p>
+<p class="repertoire-intro-text"><font class="flute">Flute</font> <font class="picc">Piccolo</font></p>
 <div class="repContainer">
 {% for heading in repertoire %}
 	<div class="repSection">
