--- a/music/templates/music_samplePrograms.html
+++ b/music/templates/music_samplePrograms.html
@@ -11,7 +11,7 @@ function showDiv(id) {
 	}
 }
 </script>
-<p style="text-align:center">Click each title for a sample program.<br/></p>
+<p class="program-intro-text">Click each title for a sample program.<br/></p>
 <div class="programContainer">
 <div class="programNav">
 {% for program in programs %}
@@ -30,7 +30,7 @@ function showDiv(id) {
 		{% endthumbnail %}
 		{% endfor %}
 	"
-	style="max-width:100%; max-height:100%;"/>
+	class="program-image"/>
 	{% endwith %}
 </div>
 {% for program in programs %}
@@ -38,7 +38,7 @@ function showDiv(id) {
 	<h3>{{ program.name }}</h3>
 	{{ program.description }}<br/>
 	<br/>
-	<table style="width:100%; max-height:100%; margin:auto">
+	<table class="program-table">
 	{% for slot in program.programSlots.all|order_by:'order' %}
 		<tr class="programPiece"><td colspan=3>{{ slot.piece.name }}</td><td style="text-align:right;">{{ slot.piece.composer.firstName }} {{ slot.piece.composer.lastName }} ({{ slot.piece.composer.birthYear|default_if_none:"" }} - {{ slot.piece.composer.deathYear|default_if_none:"" }})</td></tr>
 		{% for mvt in slot.piece.movements|order_by:'order' %}
